# apple_subs

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  webhook_receiver.py
alembic/: env.py
alembic/versions/: c1ffe7a7e14f_create_users_products_transactions_.py
src/: config.py  create_tables.py  main.py  main_old.py  schemas_old.py
src/api/: routes.py
src/apple/: client.py  webhook.py
src/db/: models.py  session.py
src/models/: models.py
src/routes/: apple_webhook.py  auth.py  iap.py  usage.py
src/schemas/: auth.py  iap.py  schemas.py
src/service/: entitlements.py
src/services/: apple_service.py  apple_signin.py  appstore_notifications.py  auth_service.py  credit_service.py  iap_service.py  subscription_service.py  user_service.py
