[project]
name = "apple-subs"
version = "0.1.0"
description = ""
authors = [
    {name = "kremenevskiy",email = "kremeneuski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "app-store-server-library (>=1.8.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
